--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Proffy",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon src/server.js"
   },
